Cambio para solventar errata en un literal

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <li><a href="javascript:;" class="gerona">Girona</a></li>
         <li><a href="javascript:;" class="granada">Granada</a></li>
         <li><a href="javascript:;" class="guadalajara">Guadalajara</a></li>
-        <li><a href="javascript:;" class="guipuzcoa">Guipuzkoa</a></li>
+        <li><a href="javascript:;" class="guipuzcoa">Gipuzkoa</a></li>
         <li><a href="javascript:;" class="huelva">Huelva</a></li>
         <li><a href="javascript:;" class="huesca">Huesca</a></li>
         <li><a href="javascript:;" class="jaen">Jaén</a></li>
