Se añade la funcionalidad del Tooltip, añadiendo el plugin qTip2
Ahora al pasar sobre cada provincia saldrá un popup con la información
deseada

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Mapa España por provincias</title>
 <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
+<link href="./css/jquery.qtip.min.css" type="text/css" rel="stylesheet"/>
 <script src="./js/jquery-1.10.2.min.js"></script>
+<script src="./js/jquery.qtip.min.js"></script>
 <script src="./js/javascript.js"></script>
 </head>
 
